<resources>
    <string name="app_name">MyFitnessApp</string>
    <string name="sign_up">Sign Up</string>
    <string name="password">Password&#8230;</string>
    <string name="usename">Username&#8230;</string>
    <string name="create_a_username">Create a username</string>
    <string name="email">Email&#8230;</string>
    <string name="sign_up_edit">Sign Up</string>
    <string name="login">Login</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="logout">logout</string>
    <string name="title_activity_login2">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_run_tracker">Map</string>
    <string name="title_activity_running_tracker">Map</string>
    <string name="title_activity_main_home_pager">MainHomePagerActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>
    <string name="title_activity_food_search">FoodSearchActivity</string>
    <string name="_0_ft_0_in">0 ft, 0 in</string>
    <string name="lbs">0 lbs</string>
    <string name="tdee">TDEE</string>
    <string name="_1234">1234</string>
    <string name="calorie_goal">Calorie Goal</string>
    <string name="_1234_">1234</string>
    <string name="bmr">BMR</string>
    <string name="bmi">BMI</string>
    <string name="activate_account">Activate Account</string>
    <string name="nutrition_facts">Nutrition Facts</string>
    <string name="serving_size">Serving size</string>
    <string name="_2_cals">2 cals</string>
    <string name="meal_amp_snack_time"><![CDATA[Meal & Snack Time]]></string>
    <string name="anytime">ANYTIME</string>
    <string name="breakfast">BREAKFAST</string>
    <string name="lunch">LUNCH</string>
    <string name="dinner">DINNER</string>
    <string name="morning_snack">MORNING SNACK</string>
    <string name="afternoon_snack">AFTERNOON SNACK</string>
    <string name="evening_snack">EVENING SNACK</string>
    <string name="day">DAY</string>
    <string name="log_add_more"><![CDATA[LOG & ADD MORE]]></string>
    <string name="log_this">log this</string>
    <string name="title_activity_saved_routes">SavedRoutesActivity</string>
    <string name="title_activity_route_details_maps">Map</string>
    <string name="calorieGoal">2,280</string>

    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>

</resources>
