<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="0dp"
    tools:context="com.darrenmoriarty.myfitnessapp.pageractivities.diet_package.AddFoodActivity">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/foodNameTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="TextView"/>

                <TextView
                    android:id="@+id/nutritionFactsTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/nutrition_facts"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/fatTextView"
                    android:layout_width="121dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="TextView"
                    android:textAlignment="center"/>

                <TextView
                    android:id="@+id/carbTextView"
                    android:layout_width="121dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.07"
                    android:text="TextView"
                    android:textAlignment="center"/>

                <TextView
                    android:id="@+id/proteinTextView"
                    android:layout_width="121dp"
                    android:layout_height="wrap_content"
                    android:text="TextView"
                    android:textAlignment="center"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/servingSizeTextView"
                    android:layout_width="95dp"
                    android:layout_height="wrap_content"
                    android:text="@string/serving_size"/>

                <EditText
                    android:id="@+id/qtyEditText"
                    android:layout_width="39dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="number"
                    android:selectAllOnFocus="false"
                    tools:text="1"/>

                <Spinner
                    android:id="@+id/spinner"
                    android:layout_width="57dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.09"/>

                <TextView
                    android:id="@+id/caloriestextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.08"
                    android:text="@string/_2_cals"/>
            </LinearLayout>

            <TextView
                android:id="@+id/textView23"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/meal_amp_snack_time"
                android:textSize="24sp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <RadioGroup
                    android:layout_width="180dp"
                    android:layout_height="match_parent">

                    <RadioButton
                        android:id="@+id/anytimeRadioButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/anytime"/>

                    <RadioButton
                        android:id="@+id/breakfastRadioButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/breakfast"/>

                    <RadioButton
                        android:id="@+id/lunchRadioButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/lunch"/>

                    <RadioButton
                        android:id="@+id/dinnerRadioButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/dinner"/>
                </RadioGroup>

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <RadioButton
                        android:id="@+id/morningSnackRadioButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/morning_snack"/>

                    <RadioButton
                        android:id="@+id/afternoonRadioButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/afternoon_snack"/>

                    <RadioButton
                        android:id="@+id/eveningRadioButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/evening_snack"/>
                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/dayTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.11"
                    android:text="@string/day"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/logAddMoreButton"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.68"
                    android:text="@string/log_add_more"
                    android:textSize="12sp"/>

                <Button
                    android:id="@+id/logThisButton"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/log_this"/>
            </LinearLayout>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

</LinearLayout>
